version/0.65/_sources/autoapi/pyedb/grpc/database/geometry/polygon_data/PolygonData.rst.txt






:class:`PolygonData`
====================


.. py:class:: pyedb.grpc.database.geometry.polygon_data.PolygonData(pedb, edb_object=None, create_from_points=None, create_from_circle=None, create_from_rectangle=None, create_from_bounding_box=None, **kwargs)

   Bases: :py:obj:`ansys.edb.core.geometry.polygon_data.PolygonData`


   
   Class managing Polygon Data.
















   ..
       !! processed by numpydoc !!



.. py:currentmodule:: PolygonData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create_from_points`
            - 
          * - :py:attr:`~expand`
            - Expand the polygon shape by an absolute value in all direction.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~bounding_box`
            - Bounding box.
          * - :py:attr:`~arcs`
            - Get the Primitive Arc Data.
          * - :py:attr:`~points`
            - Get all points in polygon.



   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create_from_bounding_box`
            - Create PolygonData from point list.





Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.geometry.polygon_data import PolygonData

Property detail
---------------

.. py:property:: bounding_box
   :type: list[float]


   
   Bounding box.



   :Returns:

       :obj:`List`\[:class:`python:float`]
           List of coordinates for the component's bounding box, with the list of
           coordinates in this order: [X lower left corner, Y lower left corner,
           X upper right corner, Y upper right corner].













   ..
       !! processed by numpydoc !!

.. py:property:: arcs
   :type: list[pyedb.grpc.database.geometry.arc_data.ArcData]


   
   Get the Primitive Arc Data.



   :Returns:

       :obj:`List`\[:class:`ArcData <pyedb.grpc.database.geometry.arc_data.ArcData>`]
           ..













   ..
       !! processed by numpydoc !!

.. py:property:: points
   :type: list[list[float]]


   
   Get all points in polygon.



   :Returns:

       :class:`python:list`\[:class:`python:list`\[:class:`python:float`]]
           ..













   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: create_from_points(points, closed=True)

.. py:method:: create_from_bounding_box(points) -> ansys.edb.core.geometry.polygon_data.PolygonData
   :staticmethod:


   
   Create PolygonData from point list.



   :Returns:

       :class:`PolygonData <pyedb.grpc.database.geometry.polygon_data.PolygonData>`
           ..













   ..
       !! processed by numpydoc !!

.. py:method:: expand(offset=0.001, tolerance=1e-12, round_corners=True, maximum_corner_extension=0.001) -> bool

   
   Expand the polygon shape by an absolute value in all direction.
   Offset can be negative for negative expansion.


   :Parameters:

       **offset** : :class:`python:float`, :obj:`optional`
           Offset value in meters.

       **tolerance** : :class:`python:float`, :obj:`optional`
           Tolerance in meters.

       **round_corners** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to round corners or not.
           If True, use rounded corners in the expansion otherwise use straight edges (can be degenerate).

       **maximum_corner_extension** : :class:`python:float`, :obj:`optional`
           The maximum corner extension (when round corners are not used) at which point the corner is clipped.

   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           ..













   ..
       !! processed by numpydoc !!




